Make initial effort on windows platform

--- a/src/ase/meson.build
+++ b/src/ase/meson.build
@@ -1,4 +1,27 @@
 
+glsrcs = [
+  'gl/glplatform.cpp',
+  'gl/glprogram.cpp',
+  'gl/glshader.cpp',
+  'gl/glvertexshader.cpp',
+  'gl/glfragmentshader.cpp',
+  'gl/glbuffer.cpp',
+  'gl/glvertexbuffer.cpp',
+  'gl/glindexbuffer.cpp',
+  'gl/gluniformbuffer.cpp',
+  'gl/gltexture.cpp',
+  'gl/glerror.cpp',
+  'gl/gltype.cpp',
+  'gl/glblendmode.cpp',
+  'gl/glrendercontext.cpp',
+  'gl/glframebuffer.cpp',
+  'gl/glpipeline.cpp',
+  'gl/globjectmanager.cpp',
+  'gl/glrenderstate.cpp',
+  'gl/gldispatchedcontext.cpp',
+  'gl/gluniformset.cpp'
+  ]
+
 if target_machine.system() == 'linux'
     gldep = dependency('gl')
     x11dep = dependency('x11')
@@ -12,26 +35,16 @@ if target_machine.system() == 'linux'
         'glx/glxcontext.cpp',
         'glx/glxdispatchedcontext.cpp',
         'glx/glxframebuffer.cpp',
-        'gl/glplatform.cpp',
-        'gl/glprogram.cpp',
-        'gl/glshader.cpp',
-        'gl/glvertexshader.cpp',
-        'gl/glfragmentshader.cpp',
-        'gl/glbuffer.cpp',
-        'gl/glvertexbuffer.cpp',
-        'gl/glindexbuffer.cpp',
-        'gl/gluniformbuffer.cpp',
-        'gl/gltexture.cpp',
-        'gl/glerror.cpp',
-        'gl/gltype.cpp',
-        'gl/glblendmode.cpp',
-        'gl/glrendercontext.cpp',
-        'gl/glframebuffer.cpp',
-        'gl/glpipeline.cpp',
-        'gl/globjectmanager.cpp',
-        'gl/glrenderstate.cpp',
-        'gl/gldispatchedcontext.cpp',
-        'gl/gluniformset.cpp'
+        glsrcs
+        ]
+elif target_machine.system() == 'windows'
+    system_deps = []
+    system_incs = []
+    system_src = [
+        'windows/windowsplatform.cpp',
+        'windows/windowsrendercontext.cpp',
+        'windows/windowswindow.cpp',
+        'dummy/dummyframebuffer.cpp'
         ]
 else
     system_deps = []
