--- a/src/ase/meson.build
+++ b/src/ase/meson.build
@@ -48,12 +48,7 @@ elif target_machine.system() == 'windows'
         'windows/wglrendercontext.cpp',
         'windows/wglwindow.cpp',
         'windows/wgldispatchedcontext.cpp',
-        'dummy/dummyframebuffer.cpp',
-        'dummy/dummyprogram.cpp',
-        'dummy/dummyuniformbuffer.cpp',
-        'dummy/dummytexture.cpp',
-        'dummy/dummypipeline.cpp',
-        'dummy/dummyuniformset.cpp',
+        'windows/wglframebuffer.cpp',
         glsrcs
         ]
 else
