Implement text events + usage on glx

--- a/src/ase/meson.build
+++ b/src/ase/meson.build
@@ -106,6 +106,7 @@ libasesrc = [
         'pipeline.cpp',
         'pointerbuttonevent.cpp',
         'keyevent.cpp',
+        'textevent.cpp',
         'keycode.cpp',
         'uniformset.cpp'
         ]
