Split DrawCommand from RenderCommand

--- a/src/ase/meson.build
+++ b/src/ase/meson.build
@@ -101,7 +101,7 @@ libasesrc = [
         'vertexshader.cpp',
         'program.cpp',
         'commandbuffer.cpp',
-        'rendercommand.cpp',
+        'drawcommand.cpp',
         'renderqueue.cpp',
         'texture.cpp',
         'framebuffer.cpp',
