--- a/src/ase/meson.build
+++ b/src/ase/meson.build
@@ -71,6 +71,7 @@ else
         'dummy/dummypipeline.cpp',
         'dummy/dummyuniformset.cpp',
         'dummy/dummyrenderbuffer.cpp',
+        'dummy/dummyrenderqueue.cpp',
     ]
 endif
 
