--- a/.github/workflows/build-workfllow.yaml
+++ b/.github/workflows/build-workfllow.yaml
@@ -28,7 +28,7 @@ jobs:
 
         - name: Tests
           run: |
-            cd build/${{ matrix.compiler.CC }}-${{ matrix.compiler.buildtype }}
+            cd build/${{ matrix.compiler.CC }}-${{ matrix.compiler.type }}
             ./test/unittest --gtest_output=xml
             ./test/devtest --gtest_output=xml
 
@@ -57,4 +57,68 @@ jobs:
             cd build/release
             ./test/unittest --gtest_output=xml
             ./test/devtest --gtest_output=xml
+
+    build-win:
+        runs-on: "windows-2019"
+        steps:
+        - uses: actions/checkout@v2
+          with:
+              submodules: recursive
+
+        - name: Build
+          shell: pwsh
+          run: |
+            # download and install prerequisites
+            function DownloadFile([String] $Source, [String] $Destination)
+            {
+                $retries = 2
+                for ($i = 1; $i -le $retries; $i++)
+                {
+                    try
+                    {
+                        (New-Object net.webclient).DownloadFile($Source, $Destination)
+                        break # succeeded
+                    }
+                    catch [net.WebException]
+                    {
+                        if ($i -eq $retries)
+                        {
+                        throw # fail on last retry
+                        }
+
+                        $backoff = (10 * $i) # backoff 10s, 20s, 30s...
+                        echo ('{0}: {1}' -f $Source, $_.Exception.Message)
+                        echo ('Retrying in {0}s...' -f $backoff)
+                        Start-Sleep -m ($backoff * 1000)
+                    }
+                }
+            }
+
+            DownloadFile -Source 'https://github.com/mesonbuild/cidata/raw/master/ninja.exe' -Destination "ninja.exe"
+
+            # add downloads to PATH
+            $env:Path = "$env:SYSTEM_WORKFOLDER;$env:Path"
+
+            $vswhere = "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe"
+
+            $vcvarspath = &$vswhere -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath
+            Write-Output "vc tools located at: $vcvarspath"
+
+            cmd.exe /c "call `"$vcvarspath\VC\Auxiliary\Build\vcvars64.bat`" && set > %temp%\vcvars.txt"
+
+            Get-Content "$env:temp\vcvars.txt" | Foreach-Object {
+                if ($_ -match "^(.*?)=(.*)$") {
+                Set-Content "env:\$($matches[1])" $matches[2]
+                }
+            }
+
+            $env:PKG_CONFIG_LIBDIR = "."
+
+            md build\win-release
+            echo 'Configuring...'
+            python build\meson\meson.py --buildtype=release --wrap-mode=forcefallback  . build/win-release
+            #python build\meson\meson.py compile -C build/win-$(BUILDTYPE)
+            echo 'Building...'
+            ninja -C build/win-release
+            ninja -C build/win-release test
 
