Add correct names to runs

--- a/.github/workflows/build-workfllow.yaml
+++ b/.github/workflows/build-workfllow.yaml
@@ -2,6 +2,7 @@ name: build-workflow
 on: [push]
 jobs:
     build-linux:
+        name: "build-linux ({{ matrix.compiler.CC }})"
         strategy:
             matrix:
                 compiler: [
