Add implementation for a few curves

--- a/src/avg/meson.build
+++ b/src/avg/meson.build
@@ -2,6 +2,7 @@
 incdir = include_directories('../../include', '../../include/avg', '.')
 
 libavgsrc = [
+    'curve/curves.cpp',
     'drawcontext.cpp',
     'rendertree.cpp',
     'fontmanager.cpp',
