Add graph visualizer

--- a/src/testapp1/meson.build
+++ b/src/testapp1/meson.build
@@ -1,5 +1,6 @@
 
 testapp1 = executable('testapp1',
+        'curvevisualizer.cpp',
         'adder.cpp',
         'testwidget.cpp',
         'main.cpp',
