Split functionality from rendertree + add animated tests

--- a/src/avg/meson.build
+++ b/src/avg/meson.build
@@ -3,6 +3,7 @@ incdir = include_directories('../../include', '../../include/avg', '.')
 
 libavgsrc = [
     'curve/curves.cpp',
+    'lerp.cpp',
     'drawcontext.cpp',
     'rendertree.cpp',
     'fontmanager.cpp',
