Make initial conversion to multivalue futures

--- a/test/meson.build
+++ b/test/meson.build
@@ -3,14 +3,15 @@ gtest = subproject('gtest')
 gtestdep = gtest.get_variable('gtest_main_dep')
 
 devtest = executable('devtest',
-        'animatedtest.cpp',
-        'widgetinstancemodifiertest.cpp',
+        'asynctest.cpp',
         include_directories : incdir,
         link_with : [],
-        dependencies : [gtestdep, libasedep, libavgdep, libreactivedep]
+        dependencies : [gtestdep]#, libasedep, libavgdep, libreactivedep]
         )
 
 unittest = executable('unittest',
+        'animatedtest.cpp',
+        'widgetinstancemodifiertest.cpp',
         'grouptest.cpp',
         'signalwraptest.cpp',
         'signalresulttest.cpp',
@@ -50,7 +51,6 @@ unittest = executable('unittest',
         'brushtest.cpp',
         'colortest.cpp',
         'pentest.cpp',
-        'asynctest.cpp',
         'typelisttest.cpp',
         include_directories : incdir,
         link_with : [],
