Transform widget modifiers to type erased versions to improve build times

--- a/src/reactive/meson.build
+++ b/src/reactive/meson.build
@@ -2,17 +2,30 @@
 incdir = include_directories('../../include', '../../include/reactive', '.')
 
 libreactivesrc = [
-    'widget/widget.cpp',
-    'widget/instance.cpp',
+    'widget/addwidgets.cpp',
+    'widget/bin.cpp',
     'widget/button.cpp',
-    'widget/widgetobject.cpp',
+    'widget/clip.cpp',
+    'widget/focusgroup.cpp',
+    'widget/focuson.cpp',
+    'widget/frame.cpp',
+    'widget/instance.cpp',
+    'widget/label.cpp',
+    'widget/margin.cpp',
+    'widget/onpointerdown.cpp',
+    'widget/onpointermove.cpp',
+    'widget/onclick.cpp',
+    'widget/onhover.cpp',
+    'widget/onkeyevent.cpp',
+    'widget/ontextevent.cpp',
+    'widget/setsizehint.cpp',
     'widget/scrollbar.cpp',
     'widget/scrollview.cpp',
-    'widget/bin.cpp',
     'widget/textedit.cpp',
-    'widget/label.cpp',
     'widget/theme.cpp',
-    'widget/focusgroup.cpp',
+    'widget/trackfocus.cpp',
+    'widget/widget.cpp',
+    'widget/widgetobject.cpp',
     'debug/drawkeyboardinputs.cpp',
     'shapes.cpp',
     'uniformgrid.cpp',
