Make more modifiers to be type erased

--- a/src/reactive/meson.build
+++ b/src/reactive/meson.build
@@ -14,6 +14,7 @@ libreactivesrc = [
     'widget/margin.cpp',
     'widget/onpointerdown.cpp',
     'widget/onpointermove.cpp',
+    'widget/onpointerup.cpp',
     'widget/onclick.cpp',
     'widget/onhover.cpp',
     'widget/onkeyevent.cpp',
