--- a/.github/workflows/build-workflow.yaml
+++ b/.github/workflows/build-workflow.yaml
@@ -4,6 +4,7 @@ jobs:
     clang-format:
         name: "Clang-format"
         runs-on: "ubuntu-latest"
+        if: false
         steps:
         - uses: actions/checkout@v4
           with:
@@ -26,7 +27,6 @@ jobs:
 
     build-linux:
         name: "build-linux (${{ matrix.compiler.CC }})"
-        needs: clang-format
         strategy:
             matrix:
                 compiler: [
@@ -59,7 +59,6 @@ jobs:
             ./test/devtest --gtest_output=xml
 
     build-macos:
-        needs: clang-format
         runs-on: "macOS-latest"
         steps:
         - uses: actions/checkout@v2
@@ -86,7 +85,6 @@ jobs:
             ./test/devtest --gtest_output=xml
 
     build-win:
-        needs: clang-format
         runs-on: "windows-2019"
         steps:
         - uses: actions/checkout@v2
