Add withAnimation helpers with AnimationGuard

--- a/src/reactive/meson.build
+++ b/src/reactive/meson.build
@@ -53,6 +53,7 @@ libreactivesrc = [
     'stacksizehint.cpp',
     'growsizehint.cpp',
     'sizehint.cpp',
+    'withanimation.cpp',
 ]
 
 reactivedep = [libbtldep, libasedep, libavgdep]
