--- a/src/meson.build
+++ b/src/meson.build
@@ -1,6 +1,12 @@
+btl_args = []
+if get_option('tracy_enable')
+  btl_args = ['-DTRACY_ENABLE']
+endif
+
 libbtldep = declare_dependency(
         include_directories: include_directories('../include'),
-        dependencies: []
+        dependencies: [],
+        compile_args: btl_args,
         )
 
 subdir('ase')
