--- a/src/testapp1/meson.build
+++ b/src/testapp1/meson.build
@@ -1,10 +1,10 @@
 
-testapp1 = executable('testapp1',
+executable('testapp1',
         'spinner.cpp',
         'curvevisualizer.cpp',
         'adder.cpp',
         'testwidget.cpp',
         'main.cpp',
-        dependencies : [libbtldep, libasedep, libavgdep, libreactivedep]
+        dependencies : [libreactivedep]
         )
 
