Move avg library specific stuff under src/avg

--- a/src/avg/meson.build
+++ b/src/avg/meson.build
@@ -1,44 +1,54 @@
-
-incdir = include_directories('../../include', '../../include/avg', '.')
-
 libavgsrc = [
-    'curve/curves.cpp',
-    'animated.cpp',
-    'lerp.cpp',
-    'drawcontext.cpp',
-    'rendertree.cpp',
-    'fontmanager.cpp',
-    'fontimpl.cpp',
-    'font.cpp',
-    'region.cpp',
-    'rect.cpp',
-    'polyline.cpp',
-    'path.cpp',
-    'pathbuilder.cpp',
-    'painter.cpp',
-    'drawing.cpp',
-    'shape.cpp',
-    'pen.cpp',
-    'softmesh.cpp',
-    'textentry.cpp',
-    'obb.cpp',
-    'rendering.cpp',
-    'targetimage.cpp',
-    'clipper/clipper.cpp',
-    ]
+  'src/curve/curves.cpp',
+  'src/animated.cpp',
+  'src/lerp.cpp',
+  'src/drawcontext.cpp',
+  'src/rendertree.cpp',
+  'src/fontmanager.cpp',
+  'src/fontimpl.cpp',
+  'src/font.cpp',
+  'src/region.cpp',
+  'src/rect.cpp',
+  'src/polyline.cpp',
+  'src/path.cpp',
+  'src/pathbuilder.cpp',
+  'src/painter.cpp',
+  'src/drawing.cpp',
+  'src/shape.cpp',
+  'src/pen.cpp',
+  'src/softmesh.cpp',
+  'src/textentry.cpp',
+  'src/obb.cpp',
+  'src/rendering.cpp',
+  'src/targetimage.cpp',
+  'src/clipper/clipper.cpp',
+  ]
 
 libavg = library(
-        'avg',
-        libavgsrc,
-        include_directories : incdir,
-        dependencies : [libasedep, libfreetypedep, mapboxdep],
-        cpp_args: ['-DAVG_EXPORT_SYMBOLS'],
-        gnu_symbol_visibility: 'hidden'
-        )
+  'avg',
+  libavgsrc,
+  include_directories: include_directories('include', 'include/avg', 'src'),
+  dependencies: [libasedep, libfreetypedep, mapboxdep],
+  cpp_args: ['-DAVG_EXPORT_SYMBOLS'],
+  gnu_symbol_visibility: 'hidden'
+  )
 
 libavgdep = declare_dependency(
-        link_with: libavg,
-        dependencies: [libasedep, libfreetypedep],
-        include_directories: include_directories('../../include')
-        )
+  link_with: libavg,
+  dependencies: [libasedep, libfreetypedep],
+  include_directories: include_directories('include')
+  )
+
+avgtest =  executable('avgtest',
+  'test/animatedtest.cpp',
+  'test/pathtest.cpp',
+  'test/avgtransformtest.cpp',
+  'test/fonttest.cpp',
+  'test/brushtest.cpp',
+  'test/colortest.cpp',
+  'test/pentest.cpp',
+  dependencies: [gtestdep, libavgdep],
+  )
+
+test('avg', avgtest, timeout: 1200, args: ['--gtest_output=xml'])
 
